# tauri-symbols

./: .gitignore  .prettierignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  data.json  package.json  pnpm-lock.yaml  renovate.json  svelte.config.js  vite.config.ts
.changes/: config.json  initial-release.md
.github/workflows/: audit-javascript.yml  audit-rust.yml  covector-status.yml.disabled  covector-version-or-publish.yml  lint-javascript.yml  lint-rust.yml  release-nightly.yml
isolation/: index.html  index.js
src/: app.html  global.css  i18n.ts
src-tauri/: CHANGELOG.md  Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: data.json
src/i18n/: en.json
src/lib/: Icon.svelte  Intersector.svelte  Titlebar.svelte  VirtualList.svelte
src/lib/i18n/: index.ts  lang.json
src/lib/i18n/de-DE/: titlebar.json
src/lib/i18n/en-US/: titlebar.json
src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte  __layout.svelte  index.svelte
src/stores/: font-weight.ts  icons.ts  scroll-position.ts
