[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
fst = "0.4.7"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tauri-build = { version = "1.0.4", features = [] }


[dependencies]
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "macos-transparent-titlebar", features = ["window-maximize", "window-show", "window-start-dragging", "window-unmaximize"] }
fst = { version = "0.4.7"}
regex-automata = { version = "0.2.0", features = ["transducer"] }
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0.32"
cached = { version = "0.38.0", default-features = false, features = ["proc_macro"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]