[package]
name = "tauri-symbols"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "tauri-symbols"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
fst = "0.4.7"
serde = { version = "1.0.145", features = [ "derive" ] }
serde_json = "1.0.87"
tauri-build = { git = "https://github.com/tauri-apps/tauri", features = ["isolation"] }

[dependencies]
tauri = { git = "https://github.com/tauri-apps/tauri", features = ["isolation", "window-maximize", "window-show", "window-start-dragging", "window-unmaximize"] }
fst = { version = "0.4.7" }
regex-automata = { version = "0.2.0", features = [ "transducer" ] }
serde = { version = "1.0.145", features = [ "derive" ] }
thiserror = "1.0.37"
cached = { version = "0.39.0", default-features = false, features = [ "proc_macro" ] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
