[package]
name = "tauri-symbols"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "tauri-symbols"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
fst = "0.4.7"
serde = { version = "1.0.152", features = [ "derive" ] }
serde_json = "1.0.93"
tauri-build = { version = "1.2.1", features = ["isolation"] }

[dependencies]
tauri = { version = "1.2.4", features = ["isolation", "window-maximize", "window-show", "window-start-dragging", "window-unmaximize"] }
fst = { version = "0.4.7" }
regex-automata = { version = "0.2.0", features = [ "transducer" ] }
serde = { version = "1.0.152", features = [ "derive" ] }
thiserror = "1.0.38"
cached = { version = "0.42.0", default-features = false, features = [ "proc_macro" ] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
